--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
-# Object files
+*.swp
+*.swo
 *.o
-*.ko
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
+Obsequi
+a.out
