--- a/obsequi/Makefile
+++ b/obsequi/Makefile
@@ -5,7 +5,7 @@ CPPFLAGS= `./cppflags`
 EXE= Obsequi
 OBJS= obsequi.o utils.o \
       negamax.o position_values.o \
-      toggle_move.o move_gen.o move_sort.o hash.o \
+      toggle_move.o move-gen.o move_sort.o hash.o \
       display.o traits.o \
       tables.o init.o lastbit.o countmoves.o \
       does_x_win.o
