Group the move functionality together

--- a/obsequi/Makefile
+++ b/obsequi/Makefile
@@ -5,8 +5,7 @@ CPPFLAGS= `./cppflags`
 EXE= Obsequi
 OBJS= obsequi.o utils.o board.o \
       negamax.o positional-values.o \
-      toggle_move.o move-gen.o move_sort.o hash-table.o \
-      display.o \
+      move.o hash-table.o display.o \
       init.o lastbit.o countmoves.o \
       score-board.o
 
