--- a/obsequi/Makefile
+++ b/obsequi/Makefile
@@ -5,8 +5,8 @@ CPPFLAGS= `./cppflags`
 EXE= Obsequi
 OBJS= obsequi.o utils.o board.o \
       negamax.o positional-values.o \
-      move.o hash-table.o display.o \
-      init.o lastbit.o countmoves.o \
+      move.o hash-table.o \
+      lastbit.o countmoves.o \
       score-board.o
 
 $(EXE): $(OBJS)
