Simple, COOL!!!, Web Interface
Here is a bunch of code I was playing with over my christmas holidays.

- Basic web interface for obsequi
- Communication using json/protobufs
- Multi threaded http server
- Some really ugly code that should be cleaned up  :-)

--- a/obsequi/Makefile
+++ b/obsequi/Makefile
@@ -15,12 +15,10 @@ CPPFLAGS += -O3 -march=native
 # Create better debug symbols.
 CPPFLAGS += -g -rdynamic
 
-
-# TODO: pb.cc files should go in objs/
 TESTS = $(wildcard *_test.cc)
 SRCS = $(filter-out $(TESTS),$(wildcard *.cc))
 
-all: Obsequi tests
+all: Server Obsequi tests
 #tests: objs/bitops_test
 tests: $(TESTS:%.cc=objs/%)
 
@@ -31,6 +29,14 @@ O_OBJS= $(addprefix objs/,$(O_OBJSX))
 Obsequi: $(O_OBJS)
 	$(CC) $(CPPFLAGS) $(CFLAGS) $^ -o $@
 
+# Domineering Solver, with HTML UI
+S_OBJSX= main.o base.o protoson.o http.o server.o obsequi.pb.o \
+	board.o positional-values.o hash-table.o \
+	score-board.o bitops.o
+S_OBJS= $(addprefix objs/,$(S_OBJSX))
+Server: $(S_OBJS)
+	$(CC) $(CPPFLAGS) $(CFLAGS) $^ -o $@ `pkg-config --libs protobuf`
+
 # Tests
 objs/bitops_test: bitops_test.cc objs/bitops.o
 objs/board_test: board_test.cc objs/move.o objs/board.o objs/bitops.o \
@@ -38,12 +44,20 @@ objs/board_test: board_test.cc objs/move.o objs/board.o objs/bitops.o \
 objs/move_test: move_test.cc objs/move.o objs/board.o objs/bitops.o \
     objs/base.o objs/hash-table.o objs/positional-values.o
 
+# List of implicit rules
+%.pb.cc %.pb.h : %.proto
+	protoc --cpp_out=. $<
+
+objs/%.pb.o : %.pb.cc
+	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
+
+# No idea why pb.h files needs to be listed twice, but otherwise it deletes it.
 objs/%.o : %.cc
-	$(CC) $(CPPFLAGS) -MM $< -MT $@ > objs/$*.D
+	$(CC) $(CPPFLAGS) -MM $< -MG -MT $@ > objs/$*.D
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
 objs/%_x.o : %.cc
-	$(CC) $(CPPFLAGS) -MM $< -MT $@ > objs/$*_x.D
+	$(CC) $(CPPFLAGS) -MM $< -MG -MT $@ > objs/$*_x.D
 	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
 objs/%_test : %_test.cc
